Correction of typos

--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -4596,7 +4596,7 @@
   "skill.swiftSizzle": "-40% времени приготовления на костре с нефтью",
   "skill.tapProspector": "Добыча малых миниральных узлов в 1 клик",
   "skill.toughTree": "1/10 шанс получить +3 древесины",
-  "skill.treeBlitz": "Мгновено восстановить все деревья",
+  "skill.treeBlitz": "Мгновенно восстановить все деревья",
   "skill.treeCharge": "-10% времени роста деревьев",
   "skill.treeTurnaround": "15% вероятности мгновенного роста деревьев",
   "skill.turboCharged": "+5 фруктового удобрения",
