[FEAT] Update  Codex Chapter Page (#5134)
* [FEAT] Update codex season page

* [FEAT] Add dynamic dates

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3296,8 +3296,8 @@
   "season.codex.intro": "Earn {{ticket}}s to craft exclusive collectibles & wearables for your farm in this limited season...Hurry before time runs out!",
   "season.codex.howToEarn": "How to earn {{ticket}}s?",
   "season.codex.howToEarn.one": "Visit the plaza & deliver resources to Bumpkins.",
-  "season.codex.howToEarn.two": "Complete chores for Bumpkins. (Nov 11th)",
-  "season.codex.howToEarn.three": "Trade animal and flower bounties! (Nov 11th)",
+  "season.codex.howToEarn.two": "Complete chores for Bumpkins. ({{date}})",
+  "season.codex.howToEarn.three": "Trade animal and flower bounties! ({{date}})",
   "season.codex.nextDrop": "Next Drop",
   "season.codex.nextDrop.available": "{{dropSupply}} available",
   "season.codex.auction.totalSupply": "Total Supply: {{totalSupply}}",
@@ -3309,6 +3309,8 @@
   "season.codex.mutants.one": "Collect eggs to discover the {{item}}.",
   "season.codex.mutants.two": "Fish in the depths for the {{item}}.",
   "season.codex.mutants.three": "Experiment with flowers to discover the {{item}}.",
+  "season.codex.mutants.four": "Collect milk from your cows to discover the {{item}}.",
+  "season.codex.mutants.five": "Gather wool from your sheep to discover the {{item}}.",
   "share.TweetText": "Visit My Sunflower Land Farm",
   "share.ShareYourFarmLink": "Share Your Farm Link",
   "share.ShowOffToFarmers": "Show off to fellow farmers by sharing your farm link",
