--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5175,5 +5175,6 @@
   "time.left": "left",
   "competition.ended": "Competition has ended",
   "competition.ended.description": "The competition has ended. Thank you for participating!",
-  "competition.ended.description.two": "The winners are being calculated and will be announced on February 7th!"
+  "competition.ended.description.two": "The winners are being calculated and will be announced on February 7th!",
+  "not.enough.sfl": "You do not have enough SFL"
 }
