[FEAT] WoC Auction Boost (#5150)

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4668,6 +4668,13 @@
   "description.jellyfish.boost": "Increase fish catch by 1 in summer",
   "description.jellyfish": "A luminous marine marvel that glows with mystical energy, granting enhanced fishing abilities during the warm summer months.",
   "description.chamomile": "A decorative mutant flower found during the Winds of Change chapter.",
+  "description.goldenSheep.boost": "Feed Sheeps for free!",
+  "description.barnBlueprint.boost": "+5 Barn Animals",
+  "description.solAndLuna.boost": "2x Crafting Speed",
+  "description.blossomWard.boost": "+1 Plot Crop Yield in Spring",
+  "description.solflareAegis.boost": "-50% Plot Crop Time in Summer",
+  "description.autumnsEmbrace.boost": "-50% Plot Crop Time in Autumn",
+  "description.frozenHeart.boost": "+1 Plot Crop Yield in Winter",
   "friendship.gift.points": "Points",
   "friendship.gift.nextReward": "Next Reward:",
   "friendship.gift.firstReward": "First Reward:",
