--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4559,6 +4559,7 @@
   "description.toxic.tuft.boost": "+0.1 Merino Wool",
   "description.mootant.boost": "+0.1 Leather",
   "description.bonusTimeshard.boost": "+1 Timeshard",
+  "description.ladybugSuit.boost": "-25% Onion Seed Coin cost",
   "description.crabHat.boost": "+1 Fishing Bounty",
   "description.mammoth.boost": "-25% Cow Production Time",
 
