Fire kissed description

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4085,7 +4085,7 @@
   "skill.midasRush": "-20% Gold recovery time",
   "skill.goldenTouch": "+0.5 Gold Yield",
   "skill.morePicks": "Increased stock: +70 Pickaxe, +20 Stone Pickaxe, +7 Iron Pickaxe",
-  "skill.fireKissed": "+1 Crimstone yield on 5th consecutive day",
+  "skill.fireKissed": "+1 Crimstone yield on 5th consecutive mine",
   "skill.firesideAlchemist": "-15% Crimstone recovery time",
   "skill.fastFeasts": "-10% Firepit and Kitchen cooking time",
   "skill.nomNom": "+10% Food deliveries revenue",
