rename all references of treasure bounty to just treasure

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -229,7 +229,7 @@
   "description.bale.boost": "+0.1 Egg",
   "description.immortal.pear.boost": "+1 Fruit Harvest per seed",
   "description.immortal.pear.boosted.boost": "+2 Fruit Harvest per seed",
-  "description.treasure.map.boost": "+20% Coins Treasure Bounty Sale Price",
+  "description.treasure.map.boost": "+20% Coins Treasure Sale Price",
   "description.poppy.boost": "+0.1 Corn",
   "description.kernaldo.boost": "-25% Corn Growth Time",
   "description.grain.grinder.boost": "+20% Cake XP",
@@ -358,7 +358,7 @@
   "description.cannonball.boost": "-25% Tomato Growth Time",
   "description.tomato.bombard.boost": "+1 Tomato",
   "description.camel.boost": "+1 Sand",
-  "description.camel.boost.two": "+30% Treasure Bounty Sale Price",
+  "description.camel.boost.two": "+30% Treasure Sale Price",
   "description.reveling.lemon.boost": "+0.25 Lemon",
   "description.lemon.frog.boost": "-25% Lemon Growth Time",
   "description.clam.shell": "A clam shell.",
