[FIX] Scarecrow boost descriptions

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -200,9 +200,9 @@
   "description.heart.davy.jones": "Whoever possesses it holds immense power over the seven seas, can dig for treasure without tiring.",
   "description.treasure.map": "An enchanted map that leads the holder to valuable treasure. +20% profit from beach bounty items.",
   "description.genie.lamp": "A magical lamp that contains a genie who will grant you three wishes.",
-  "description.basic.scarecrow": "Boost nearby basic crops",
-  "description.scary.mike": "Boost nearby Carrots, Cabbages, Soybeans, Beetroots, Cauliflowers and Parsnips",
-  "description.laurie.chuckle.crow": "Boost nearby Eggplant, Corn, Radish, Wheat and Kale",
+  "description.basic.scarecrow": "Boost nearby Basic Crops.",
+  "description.scary.mike": "Boost nearby Medium Crops.",
+  "description.laurie.chuckle.crow": "Boost nearby Advanced Crops.",
   "description.immortal.pear": "Increase the survival of your fruit patches.",
   "description.bale": "Boost Egg Yield.",
   "description.sir.goldensnout": "A royal member, Sir Goldensnout infuses your farm with sovereign prosperity through its golden manure.",
