[CHORE] Clarify animal guide

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1447,7 +1447,7 @@
   "description.blowfish.two": "Dine with danger, a spiky surprise!",
   "description.clownfish.one": "The underwater jester, sporting a tangerine tuxedo and a clownish charm.",
   "description.clownfish.two": "No jokes, just pure deliciousness!",
-  "description.seabass.one": "Your 'not-so-exciting' friend with silver scales – a bassic catch!",
+  "description.seabass.one": "Your 'not-so-exciting' friend with silver scales - a bassic catch!",
   "description.seabass.two": "The bass-ics of seaside cuisine!",
   "description.seahorse.one": "The ocean's slow-motion dancer, swaying gracefully in the aquatic ballet.",
   "description.seahorse.two": "Dainty, rare, and surprisingly tasty!",
@@ -1461,7 +1461,7 @@
   "description.morayeel.two": "Slippery, savory, and sensational!",
   "description.oliveflounder.one": "The seabed's master of disguise, always blending in with the crowd.",
   "description.oliveflounder.two": "Floundering in richness and taste!",
-  "description.napoleanfish.one": "Meet the fish with the Napoleon complex – short, but regal!",
+  "description.napoleanfish.one": "Meet the fish with the Napoleon complex - short, but regal!",
   "description.napoleanfish.two": "Conquer your hunger with this catch!",
   "description.surgeonfish.one": "The ocean's neon warrior, armed with a spine-sharp attitude.",
   "description.surgeonfish.two": "Operate on your taste buds with precision!",
@@ -1477,7 +1477,7 @@
   "description.mahimahi.two": "Double the name, double the deliciousness!",
   "description.bluemarlin.one": "An oceanic legend, the marlin with an attitude as deep as the sea.",
   "description.bluemarlin.two": "Spearhead your appetite with this royal catch!",
-  "description.oarfish.one": "The long and the long of it – an enigmatic ocean wanderer.",
+  "description.oarfish.one": "The long and the long of it - an enigmatic ocean wanderer.",
   "description.oarfish.two": "Row your way into legendary flavor!",
   "description.footballfish.one": "The MVP of the deep, a bioluminescent star that's ready to play!",
   "description.footballfish.two": "Score a touchdown in taste!",
@@ -1635,7 +1635,7 @@
   "flowerShop.desired.setMyHeart": "I've set my heart on growing a {{desiredFlowerName}}.",
   "flowerShop.missingPages.alas": "But alas! I've misplaced the pages of my cross-breeding book! They must be in the plaza somewhere.",
   "flowerShop.missingPages.cantBelieve": "But I can't believe it, the pages with my best hybrid flower recipes are missing. They must be in the plaza somewhere.",
-  "flowerShop.missingPages.inABind": "However, I'm in a bit of a bind – the pages containing my cross-breeding techniques seem to have disappeared. They must be in the plaza somewhere.",
+  "flowerShop.missingPages.inABind": "However, I'm in a bit of a bind - the pages containing my cross-breeding techniques seem to have disappeared. They must be in the plaza somewhere.",
   "flowerShop.missingPages.sadly": "Sadly, my cross-breeding notes are gone! I'm sure they're somewhere around here. They must be in the plaza somewhere.",
   "flowerShop.noFlowers.noTrade": "I'm sorry, I don't have any flowers to trade right now.",
   "flowerShop.do.have.trade": "Do you have a {{desiredFlower}} you would trade me?",
@@ -4602,13 +4602,13 @@
   "whatsOn.date.feb1": "February 1st",
   "chickens.deprecated.1": "Chickens are now fed in the hen house.",
   "chickens.deprecated.2": "Sell existing chickens at Garbo.",
-  "animals.guide.feeder": "Prepare food for your animals using the feeder machine.",
+  "animals.guide.feeder": "Prepare food for your animals using the Feeder Machine.",
   "animals.guide.food_preference": "Animals prefer their favourite food but will eat any food.",
   "animals.guide.progress": "Once the progress bar is full your animal is ready to level up & drop resources.",
-  "animals.guide.sleeping": "After levelling up your animal will sleep for 24 hours.",
+  "animals.guide.sleeping": "After levelling up your animals, they will go to sleep.",
   "animals.guide.affection": "Show affection to sleeping animals when they request it.",
-  "animals.guide.bounties": "Complete weekly bounties by trading your animals for rewards..",
-  "animals.guide.sickness": "Beware of sickness! Older animals are more susceptible - use Barn Delight medicine to cure them.",
+  "animals.guide.bounties": "Complete weekly bounties by trading your animals for rewards. Sleeping animals cannot be traded, and sick animals only earn you {{percent}}% of the rewards!",
+  "animals.guide.sickness": "Beware of sickness! Higher level animals are more susceptible - use Barn Delight medicine to cure them.",
   "description.alien.chicken": "A peculiar chicken from another galaxy, here to boost your feather production!",
   "description.toxic.tuft": "A mutated sheep whose toxic fleece produces the finest merino wool in the land!",
   "description.mootant": "This genetically enhanced bovine here to boost your leather production!",
