Be more specific with oil consumption skills

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4066,7 +4066,7 @@
   "skill.seededBounty.buff": "+0.5 Greenhouse produce yield",
   "skill.seededBounty.debuff": "+1 Greenhouse seed to plant",
   "skill.greasyPlants.buff": "+1 Greenhouse produce yield",
-  "skill.greasyPlants.debuff": "+100% Oil consumption",
+  "skill.greasyPlants.debuff": "+100% Oil consumption in greenhouse",
   "skill.greenhouseGuru": "Ability to make all greenhouse produce currently growing ready to be harvested",
   "skill.greenhouseGamble": "25% chance of +1 greenhouse produce",
   "skill.slickSaver": "-1 Oil to grow greenhouse products",
@@ -4114,17 +4114,17 @@
   "skill.floweryAbode.debuff": "+50% Flower growth time",
   "skill.petalBlessed": "Ability to make all flowers currently growing ready to be harvested",
   "skill.cropProcessorUnit.buff": "-5% Crop Machine growth time",
-  "skill.cropProcessorUnit.debuff": "+10% Oil consumption",
-  "skill.oilGadget": "-10% Oil consumption",
+  "skill.cropProcessorUnit.debuff": "+10% Oil consumption in Crop Machine",
+  "skill.oilGadget": "-10% Oil consumption in Crop Machine",
   "skill.oilExtraction": "+1 Oil when collecting from reserves",
   "skill.leakProofTank": "Triple oil tank capacity in crop machine",
   "skill.cropExtensionModule": "Allow Carrot and Cabbage seeds to be used in crop machine",
   "skill.rapidRig.buff": "-20% Crop Machine growth time",
-  "skill.rapidRig.debuff": "+40% Oil consumption",
+  "skill.rapidRig.debuff": "+40% Oil consumption in Crop Machine",
   "skill.oilBeBack": "-20% Oil refill time",
   "skill.fieldExpansionModule": "+5 packs added to machine",
   "skill.fieldExtensionModule": "+5 plots added to machine",
-  "skill.efficiencyExtensionModule": "-30% Oil consumption",
+  "skill.efficiencyExtensionModule": "-30% Oil consumption in Crop Machine",
   "skill.greaseLightning": "Ability to make empty oil wells instantly refill",
   "skill.efficientBin": "+5 Sprout Mix",
   "skill.turboCharged": "+5 Fruitful Blend",
