[FEAT] Megastore Buy Limit (#5178)

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3280,6 +3280,7 @@
   "season.wearableAirdrop": "Seasonal Wearable Airdrop",
   "season.place.land": "You must place it on your land",
   "season.megastore.discount": "Megastore SFL discount",
+  "season.megastore.crafting.limit": "Limit: {{limit}}/1",
   "season.supporter.gift": "Supporter Gift",
   "season.free.season.passes": "Free Chapter Banners",
   "season.free.season.passes.description": "Receive banners for every Chapter",
