[FEAT] Skill Feedback (#5182)
* [FEAT] Force autosave for fire pit and any foods that take less than 60s to cook

* [FIX] Composting Overhaul removing fertilisers

* Fire kissed description

* Power Skills UI and Skill Conditions Improvement

* [FIX] Instant Gratification null check (#5204)

* Exclude greenhouse crops from green thumb

* Move Chonky Scarecrow to T1

* use predetermined buff labels in crafting requirements

* Flower Seeds not showing boost in basket

* Pollen Power Up wrong boost amount

* Greenhouse Fruit skills

* Be more specific with oil consumption skills

* Update coinswindler description

* fix pollen power up tests

---------

Co-authored-by: Polysemouse <107602352+Polysemouse@users.noreply.github.com>

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -119,7 +119,7 @@
   "beehive.harvestHoney": "Harvest honey",
   "beehive.noFlowersGrowing": "No flowers growing",
   "beehive.beeSwarm": "Bee swarm",
-  "beehive.pollinationCelebration": "Pollination celebration! Your crops are in for a treat with a 0.2 boost from a friendly bee swarm!",
+  "beehive.pollinationCelebration": "Pollination celebration! Your crops are in for a treat with a +{{amount}} boost from a friendly bee swarm!",
   "beehive.honeyProductionPaused": "Honey production paused",
   "beehive.yield": "Yield",
   "beehive.honeyPerFullHive": "{{multiplier}} honey / full hive",
@@ -3983,13 +3983,13 @@
   "npcDialogues.sheep.intro1": "Thanks for finding me! One moment I was pretending to be a sheep with the Cowboy and the next moment I was here.",
   "npcDialogues.sheep.intro2": "All I remember is flashing lights and strange noises...",
 
-  "skill.greenThumb": "-5% crop growth time",
+  "skill.greenThumb": "-5% plot crop growth time",
   "skill.youngFarmer": "+0.1 Basic Crop yield",
   "skill.experiencedFarmer": "+0.1 Medium Crop yield",
   "skill.bettysFriend": "Betty Coin delivery revenue increased by 30%",
   "skill.oldFarmer": "+0.1 Advanced Crop yield",
   "skill.strongRoots": "-10% Advanced crop growth time",
-  "skill.coinSwindler": "+10% coins when selling crops at the Market",
+  "skill.coinSwindler": "+10% coins when selling plot crops at the Market",
   "skill.goldenSunflower": "1/700 chance for +0.35 gold when harvesting sunflowers (plots only)",
   "skill.chonkyScarecrow": "Increases Basic Scarecrow's area of effect (AOE) to a 7x7 area; Additional -10% basic crop growth time",
   "skill.horrorMike": "Increases Scary Mike's area of effect (AOE) to a 7x7 area; Additional +0.1 medium crop yield",
@@ -4067,7 +4067,7 @@
   "skill.seededBounty.buff": "+0.5 Greenhouse produce yield",
   "skill.seededBounty.debuff": "+1 Greenhouse seed to plant",
   "skill.greasyPlants.buff": "+1 Greenhouse produce yield",
-  "skill.greasyPlants.debuff": "+100% Oil consumption",
+  "skill.greasyPlants.debuff": "+100% Oil consumption in greenhouse",
   "skill.greenhouseGuru": "Ability to make all greenhouse produce currently growing ready to be harvested",
   "skill.greenhouseGamble": "25% chance of +1 greenhouse produce",
   "skill.slickSaver": "-1 Oil to grow greenhouse products",
@@ -4086,7 +4086,7 @@
   "skill.midasRush": "-20% Gold recovery time",
   "skill.goldenTouch": "+0.5 Gold Yield",
   "skill.morePicks": "Increased stock: +70 Pickaxe, +20 Stone Pickaxe, +7 Iron Pickaxe",
-  "skill.fireKissed": "+1 Crimstone yield on 5th consecutive day",
+  "skill.fireKissed": "+1 Crimstone yield on 5th consecutive mine",
   "skill.firesideAlchemist": "-15% Crimstone recovery time",
   "skill.fastFeasts": "-10% Firepit and Kitchen cooking time",
   "skill.nomNom": "+10% Food deliveries revenue",
@@ -4115,17 +4115,17 @@
   "skill.floweryAbode.debuff": "+50% Flower growth time",
   "skill.petalBlessed": "Ability to make all flowers currently growing ready to be harvested",
   "skill.cropProcessorUnit.buff": "-5% Crop Machine growth time",
-  "skill.cropProcessorUnit.debuff": "+10% Oil consumption",
-  "skill.oilGadget": "-10% Oil consumption",
+  "skill.cropProcessorUnit.debuff": "+10% Oil consumption in Crop Machine",
+  "skill.oilGadget": "-10% Oil consumption in Crop Machine",
   "skill.oilExtraction": "+1 Oil when collecting from reserves",
   "skill.leakProofTank": "Triple oil tank capacity in crop machine",
   "skill.cropExtensionModule": "Allow Carrot and Cabbage seeds to be used in crop machine",
   "skill.rapidRig.buff": "-20% Crop Machine growth time",
-  "skill.rapidRig.debuff": "+40% Oil consumption",
+  "skill.rapidRig.debuff": "+40% Oil consumption in Crop Machine",
   "skill.oilBeBack": "-20% Oil refill time",
   "skill.fieldExpansionModule": "+5 packs added to machine",
   "skill.fieldExtensionModule": "+5 plots added to machine",
-  "skill.efficiencyExtensionModule": "-30% Oil consumption",
+  "skill.efficiencyExtensionModule": "-30% Oil consumption in Crop Machine",
   "skill.greaseLightning": "Ability to make empty oil wells instantly refill",
   "skill.efficientBin": "+5 Sprout Mix",
   "skill.turboCharged": "+5 Fruitful Blend",
