[FEAT] Replace Apple-tastic with Barnyard Rouse (#5212)

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4056,7 +4056,7 @@
   "skill.cowSmartNutrition.debuff": "+50% feed to feed other animals",
   "skill.chonkyFeed.buff": "2x animal xp from animal feed",
   "skill.chonkyFeed.debuff": "+50% feed to feed all animals",
-  "skill.appleTastic": "Use 600 apples to level up all healthy animals that are not asleep",
+  "skill.barnyardRouse": "Instantly wakes up all animals",
   "skill.victoriasSecretary": "+50% Coins from Victoria's deliveries",
   "skill.glassRoom": "+0.1 Greenhouse produce yield",
   "skill.seedyBusiness": "-15% Greenhouse seeds cost",
@@ -5189,7 +5189,7 @@
   "powerSkills.reason.noBuildingsAreCooking": "No buildings are cooking",
   "powerSkills.reason.noFlowersGrowing": "No flowers are growing in flower beds",
   "powerSkills.reason.noOilreservesRefilling": "No oil reserves are refilling",
-  "powerSkills.reason.animalsSickReadyAsleep": "All your animals are sick, ready or asleep",
+  "powerSkills.reason.animalsNotAsleep": "All your animals are not asleep",
   "marketplace.withdrawComingSoon": "Withdraw date",
   "instantCook.confirmationMessage": "Are you sure you want to finish this recipe now?",
   "instantCook.costMessage": "This will cost you {{gems}} Gems",
