--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4141,7 +4141,20 @@
   "skill.compostingOverhaul.debuff": "-5 fertilisers",
   "skill.compostingRevamp.buff": "+5 fertilisers",
   "skill.compostingRevamp.debuff": "-3 Worms",
-
+  "skillReset.skillsReset": "Skills Reset",
+  "skillReset.free": "Free Reset",
+  "skillReset.gems": "Gem Reset",
+  "skillReset.180Days": "You can do this once every 180 days.",
+  "skillReset.freeDescription": "Reset all your skills for free.",
+  "skillReset.gemsDescription": "Reset all your skills using gems.",
+  "skillReset.costDoubles": "Cost doubles each reset.",
+  "skillReset.nextFreeReset": "Next free reset on {{date}} at {{time}}",
+  "skillReset.noSkills": "No skills to reset",
+  "skillReset.resetSkills": "Reset Skills",
+  "skillReset.removeCrops": "Remove crops from additional slots before resetting",
+  "skillReset.reduceOilInTank": "Reduce oil in tank before resetting",
+  "skillCategory.islands": "{{island}} Skills",
+  "skillCategory.reachIsland": "Reach {{island}} island to unlock",
   "npcDialogues.sheep.intro3": "Oh, you received a gift for today, come back in {{timeLeft}} and I will give you one more gift.",
   "chores.weeklyChores": "Weekly Chores",
   "chores.completeChoresToEarn": "Complete chores for Bumpkins to earn {{seasonalTicket}}s.",
