[FEAT] Track activities

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3182,6 +3182,7 @@
   "portal.example.intro": "Howdy Howdy, welcome to this test portal",
   "portal.example.purchase": "Purchase fake pass",
   "portal.example.unlockAchievements": "Unlock achievements",
+  "portal.example.trackActivities": "Track activities",
   "promo.cdcBonus": "Crypto.com Bonus!",
   "promo.expandLand": "Expand your land twice to claim 100 SFL.",
   "purchaseableBait.fishingLure.description": "Great for catching rare fish ! ",
