[FIX] Change Reset time to 180 days + Skill refinements (#5221)
* [FIX] Change Reset time to 180 days

* Add 2 gold pickaxe to stock for morePicks

* Clarify field expansion module

* Instant growth description clarification

* Translations

* Add custom icons for baits and fertilisers

* Adjust skill icon and canvas dimensions

* Reduce skill icon max dimensions

* fix tests

* fix test 2

* Refactor skill category list rendering logic

* Add padding around Reset Skills text

* Add more images

Co-authored-by: vitt0 <vitt0ne.jc@gmail.com>

* Adjust Zesty Vibes skill yield reduction

* Update fruit tree images

* Buff Fishy Gamble to 20%

* Improve skill category list layout with grid display

* More icons

Co-authored-by: vitt0 <vitt0ne.jc@gmail.com>

* More images

Co-authored-by: vitt0 <vitt0ne.jc@gmail.com>

* Fine-tune inner canvas width in Box component to show more boxes per row on mobile

---------

Co-authored-by: vitt0 <vitt0ne.jc@gmail.com>

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3993,7 +3993,7 @@
   "skill.goldenSunflower": "1/700 chance for +0.35 gold when harvesting sunflowers (plots only)",
   "skill.chonkyScarecrow": "Increases Basic Scarecrow's area of effect (AOE) to a 7x7 area; Additional -10% basic crop growth time",
   "skill.horrorMike": "Increases Scary Mike's area of effect (AOE) to a 7x7 area; Additional +0.1 medium crop yield",
-  "skill.instantGrowth": "Grants the ability to instantly harvest all currently growing crops",
+  "skill.instantGrowth": "Grants the ability to instantly harvest all currently growing crops in plots",
   "skill.acreFarm.buff": "+1 Advanced crop yield",
   "skill.acreFarm.debuff": "-0.5 Basic and Medium crop yield",
   "skill.hectareFarm.buff": "+1 Basic and Medium crop yield",
@@ -4015,7 +4015,7 @@
   "skill.shortPickings.buff": "-50% Blueberry and Orange growth time",
   "skill.shortPickings.debuff": "+100% growth time for all other fruits",
   "skill.zestyVibes.buff": "+1 Tomato and Lemon yield",
-  "skill.zestyVibes.debuff": "-0.5 yield for all other fruits",
+  "skill.zestyVibes.debuff": "-0.25 yield for all other fruits",
   "skill.lumberjacksExtra": "+0.1 wood yield",
   "skill.treeCharge": "-10% tree growth time",
   "skill.moreAxes": "+50 axe stock",
@@ -4032,7 +4032,7 @@
   "skill.fishermansTenFold": "+10 daily fishing limit",
   "skill.fishyFortune": "+100% coins from Corale's deliveries",
   "skill.bigCatch": "Increase bar for catching game",
-  "skill.fishyGamble": "10% chance of +1 expert fish",
+  "skill.fishyGamble": "20% chance of +1 expert fish",
   "skill.frenziedFish": "During fish frenzy, +1 fish and 50% chance of +1 fish",
   "skill.moreWithLess.buff": "+15 daily fishing limit",
   "skill.moreWithLess.debuff": "-1 worm from all composters",
@@ -4085,7 +4085,7 @@
   "skill.midasSprint": "-10% Gold recovery time",
   "skill.midasRush": "-20% Gold recovery time",
   "skill.goldenTouch": "+0.5 Gold Yield",
-  "skill.morePicks": "Increased stock: +70 Pickaxe, +20 Stone Pickaxe, +7 Iron Pickaxe",
+  "skill.morePicks": "Increased stock: +70 Pickaxe, +20 Stone Pickaxe, +7 Iron Pickaxe, +2 Gold Pickaxe",
   "skill.fireKissed": "+1 Crimstone yield on 5th consecutive mine",
   "skill.firesideAlchemist": "-15% Crimstone recovery time",
   "skill.fastFeasts": "-10% Firepit and Kitchen cooking time",
@@ -4123,7 +4123,7 @@
   "skill.rapidRig.buff": "-20% Crop Machine growth time",
   "skill.rapidRig.debuff": "+40% Oil consumption in Crop Machine",
   "skill.oilBeBack": "-20% Oil refill time",
-  "skill.fieldExpansionModule": "+5 packs added to machine",
+  "skill.fieldExpansionModule": "+5 packs added to machine queue system",
   "skill.fieldExtensionModule": "+5 plots added to machine",
   "skill.efficiencyExtensionModule": "-30% Oil consumption in Crop Machine",
   "skill.greaseLightning": "Ability to make empty oil wells instantly refill",
@@ -4141,7 +4141,20 @@
   "skill.compostingOverhaul.debuff": "-5 fertilisers",
   "skill.compostingRevamp.buff": "+5 fertilisers",
   "skill.compostingRevamp.debuff": "-3 Worms",
-
+  "skillReset.skillsReset": "Skills Reset",
+  "skillReset.free": "Free Reset",
+  "skillReset.gems": "Gem Reset",
+  "skillReset.180Days": "You can do this once every 180 days.",
+  "skillReset.freeDescription": "Reset all your skills for free.",
+  "skillReset.gemsDescription": "Reset all your skills using gems.",
+  "skillReset.costDoubles": "Cost doubles each reset.",
+  "skillReset.nextFreeReset": "Next free reset on {{date}} at {{time}}",
+  "skillReset.noSkills": "No skills to reset",
+  "skillReset.resetSkills": "Reset Skills",
+  "skillReset.removeCrops": "Remove crops from additional slots before resetting",
+  "skillReset.reduceOilInTank": "Reduce oil in tank before resetting",
+  "skillCategory.islands": "{{island}} Skills",
+  "skillCategory.reachIsland": "Reach {{island}} island to unlock",
   "npcDialogues.sheep.intro3": "Oh, you received a gift for today, come back in {{timeLeft}} and I will give you one more gift.",
   "chores.weeklyChores": "Weekly Chores",
   "chores.completeChoresToEarn": "Complete chores for Bumpkins to earn {{seasonalTicket}}s.",
