[FEAT] Add confirmations

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5469,5 +5469,7 @@
   "portal.halloween.description": "Brave the haunted mansion, collect torches, and outrun ghosts in this spooky survival challenge!",
   "recipes.upNext": "Up Next",
   "recipes.addToQueue": "Add to queue",
-  "recipes.queue": "Queue"
+  "recipes.queue": "Queue",
+  "recipes.vipCookingQueue": "Become a VIP member and unlock the ability to cook up to 4 recipes at once! Upgrade now to supercharge your cooking.",
+  "recipes.confirmAddToQueue": "Are you sure you want to add {{recipe}} to the queue?"
 }
