--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5286,6 +5286,7 @@
   "vip.access": "VIP Access",
   "vip.benefit.airdrop": "Monthly airdrop",
   "vip.benefit.expBoost": "10% EXP Boost",
+  "vip.benefit.cookingQueue": "Queue up recipes in cooking buildings",
   "vip.benefit.stellaDiscounts": "Stella SFL discounts",
   "vip.benefit.bonusDelivery": "Bonus Delivery & Chore Rewards",
   "vip.benefit.reputation": "{{points}} Reputation Points",
